--- a/trunk/src/main/resources/style/style.css
+++ b/trunk/src/main/resources/style/style.css
@@ -1,1 +1,4 @@
-.table-view {-fx-size:40px;-fx-background-color:#FFFFFF;-fx-border-width:0 0 1 1;-fx-border-color:#CCCCCC}
+.table-view {-fx-fixed-cell-size:40px;-fx-background-color:#FFFFFF;-fx-border-width:0 0 1 1;-fx-border-color:#CCCCCC}
+.table-row-cell:filled:selected{-fx-background-color:#CCCCCC;-fx-border-color:#CCCCCC}
+.column-header{-fx-size:40px;-fx-background-color:#FFFFFF;-fx-border-width:1 0 1 0;-fx-border-color:#CCCCCC}
+.table-cell{-fx-text-alignment:center;}
